# ChangeLog for sys-apps/portage
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1019 2012/05/17 00:07:51 zmedico Exp $

*portage-2.2.0_alpha107 (17 May 2012)

  17 May 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha107.ebuild,
  -portage-2.2.0_alpha106.ebuild:
  2.2.0_alpha107 version bump. This includes all of the fixes in 2.1.10.62. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.10.62 (17 May 2012)

  17 May 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.10.62.ebuild,
  -portage-2.1.10.61.ebuild:
  2.1.10.62 version bump. This fixes a traceback triggered by empty variable
  settings without quotes in make.conf (regression in 2.1.10.61 and
  2.2.0_alpha106).= Bug #409383 tracks all bugs fixed since portage-2.1.10.49.

*portage-2.2.0_alpha106 (16 May 2012)

  16 May 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha106.ebuild,
  -portage-2.2.0_alpha104.ebuild:
  2.2.0_alpha106 version bump. This includes all of the fixes in 2.1.10.61. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.10.61 (16 May 2012)

  16 May 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.10.61.ebuild,
  -portage-2.1.10.59.ebuild:
  2.1.10.61 version bump. This fixes bug #416231 (unhandled Permission denied
  error triggered by invalid EAPI assignment). FEATURES=config-protect-if-
  modified is now enabled by default. This causes the CONFIG_PROTECT behavior to
  be skipped for files that have not been modified since they were installed.
  Bug #409383 tracks all bugs fixed since portage-2.1.10.49.

*portage-2.2.0_alpha105 (15 May 2012)

  15 May 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha105.ebuild,
  -portage-2.2.0_alpha103.ebuild:
  2.2.0_alpha105 version bump. This includes all of the fixes in 2.1.10.60. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.10.60 (15 May 2012)
