@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1019 2012/05/17 00:07:51 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1020 2012/05/18 22:26:06 zmedico Exp $
+
+  18 May 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.10.60.ebuild,
+  -portage-2.2.0_alpha105.ebuild:
+  Remove old versions.
 
 *portage-2.2.0_alpha107 (17 May 2012)
 
